tests/fixtures/invalid/pow_list_list_none.py
# Cannot call pow() with List[int], List[int], None
x = pow([1, 2, 3], [1, 2, 3], None)
